--- a/semana11/web_app_biblioteca/app/templates/libros.html
+++ b/semana11/web_app_biblioteca/app/templates/libros.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="subtitle is-2">Lista de Animales</h2>
-    <!-- Lista en una tarjeta donde cada animal tenga sus datos y botones para editar y eliminar, solo visibles para administradores -->
+<h2 class="subtitle is-2">Lista de Libros</h2>
+    <!-- Lista en una tarjeta donde cada libro tenga sus datos y botones para editar y eliminar, solo visibles para administradores -->
     <div class="columns is-multiline">
-        {% for animal in animals %}
+        {% for libro in libros %}
             <div class="column is-one-third">
                 <div class="card">
                     <div class="card-content">
                         <div class="content">
-                            <p><strong>Nombre: {{ animal.name }} </strong></p>
-                            <p><strong>Especie: {{ animal.species }}</strong></p>
-                            <p><strong>Edad: {{ animal.age }}</strong></p>
+                            <p><strong>ID: {{ libro.id }} </strong></p>
+                            <p><strong>Autor: {{ libro.autor }}</strong></p>
+                            <p><strong>Título: {{ libro.titulo }}</strong></p>
+                            <p><strong>Edición: {{ libro.edicion }}</strong></p>
+                            <p><strong>Disponibilidad: {{ libro.disponibilidad }}</strong></p>
                             <div class="buttons">
                                 {% if current_user.has_role('admin') %}
-                                    <a href="{{ url_for('animal.update_animal', id=animal.id) }}" 
+                                    <a href="{{ url_for('libro.update_libro', id=libro.id) }}" 
                                     class="button is-info">Editar</a>
-                                    <a href="{{ url_for('animal.delete_animal', id=animal.id) }}" 
+                                    <a href="{{ url_for('libro.delete_libro', id=libro.id) }}" 
                                     class="button is-danger">Eliminar</a>
                                 {% endif %}
                             </div>
